ajout du formulaire + ajout du changement de statut

--- a/src/app/components/details-tache/details-tache.component.css
+++ b/src/app/components/details-tache/details-tache.component.css
@@ -3,3 +3,13 @@
     min-width: 400px;
     margin-top: 8px;
 }
+
+.full-width{
+    max-width: 100%;
+    min-width: 100%;
+}
+
+.flex{
+    display: flex;
+    justify-content: space-between;
+}
