feat : ajout de la possibilité de suppression d'une tache

--- a/src/app/components/details-tache/details-tache.component.html
+++ b/src/app/components/details-tache/details-tache.component.html
@@ -26,6 +26,10 @@
             </mat-select>
           </mat-form-field>
 
+          <button mat-fab color="warn" aria-label="Example icon button with a delete icon" (click)="deleteTache()">
+            <mat-icon>delete</mat-icon>
+          </button>
+
     </mat-card-content>
 </mat-card>
 
