fix: mise à jour de la liste sur les différents filtres + suppression du bon élément en cherchant l'index au lieu de le donner

--- a/src/app/components/liste-des-taches/liste-des-taches.component.html
+++ b/src/app/components/liste-des-taches/liste-des-taches.component.html
@@ -1,4 +1,4 @@
-<app-formulaire-tache></app-formulaire-tache>
+<app-formulaire-tache (refreshList)="refreshListe()"></app-formulaire-tache>
 
 <div class="button-row">
     <button  [class]="filter == 'Toutes'? 'blue selected':'blue'" (click)="refreshFilter('Toutes')">Toutes</button>
@@ -8,6 +8,6 @@
   </div>
 @for (tache of taches; track $index) {
     <article class="details-tache">
-        <app-details-tache [tache] = "tache" [index]="$index"> </app-details-tache>
+        <app-details-tache [tache] = "tache" (refreshList)="refreshListe()" [index]="$index"> </app-details-tache>
     </article>
 }
