feat : champs libellé et description modifiable dans le details d'une tache

--- a/src/app/components/details-tache/details-tache.component.css
+++ b/src/app/components/details-tache/details-tache.component.css
@@ -13,3 +13,13 @@
     display: flex;
     justify-content: space-between;
 }
+
+.container-button{
+    display: flex;
+    justify-content: end;
+    gap: 8px;
+}
+
+.error{
+    color: red;
+}
